--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,164 +1,219 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.navbar {
+  padding: 0 2rem !important;
+  position: sticky !important;
+  top: 0;
+  width: 100%;
+  left: 0;
+  display: flex;
+  align-items: center;
+}
+.navbar-logo {
+  margin: 0;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.2s;
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+.navbar-logo:hover {
+  transform: scale(1.05) !important;
+}
+
+.search {
+  background-color: #ECECEC;
+  max-width: 70rem;
+  width: 80vw;
+  border-radius: 2rem;
+  padding: 6rem;
+  overflow: hidden;
+  margin: 3rem auto;
+}
+.search-text {
+  color: #353434;
+  font-size: 5rem;
+  text-align: center;
+}
+.search-input {
+  overflow: hidden;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  width: 100%;
+}
+
+.header {
+  background-color: #ECECEC;
+  max-width: 70rem;
+  width: 80%;
+  border-radius: 2rem;
+  padding: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem auto;
+}
+.header-text {
+  margin: 0;
+  color: #353434;
+  font-size: 5rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 10px !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
-.col-container{
+
+html {
+  font-size: 10px !important;
+}
+
+.App {
+  position: relative;
+  overflow: auto !important;
+}
+
+.col-container {
   overflow: auto;
 }
-.col{
-   width: 40%;
-   float: left;
-   margin-right: 5%;
-}
-.logo{
-  display: inline-block;
-  text-align: left;
-  height: 20px;
 
-  padding-left: 2%;
-  color: 	#25383C;
+.col {
+  width: 40%;
+  float: left;
+  margin-right: 5%;
 }
-h3{
+
+h3 {
   text-align: left;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-.top-container{
 
+.landing-top {
+  background-color: aquamarine;
 }
-.middle-container{
 
-}
-.search{
-
-}
-.post{
-
-}
-.posts{
-
-}
-.post-main{
-
-}
-.post-main-title{
-
-}
-.post-main-image{
-
-}
-.post-main-description{
-
-}
-.post-main-paypal{
-  
-}
-.landing-top{
-background-color: aquamarine;
-
-}
-.landing-middle{
-
-}
-.landing-bottom{
-
-}
-.landing-image{
+.landing-image {
   /* float: right; */
 }
-.form-btn{
-padding: 0% 20%;
+
+.form-btn {
+  padding: 0% 20%;
 }
-.landing-title{
-  float:left;
+
+.landing-title {
+  float: left;
   text-align: left;
-  padding-bottom:5%;
-  padding-left:5%;
-  padding-right:5%;
-  padding-top:10%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 10%;
   font-weight: 700;
   font-size: xx-large;
 }
-.login-title{
- 
+
+.login-title {
   text-align: center;
-  padding-bottom:5%;
-  padding-left:5%;
-  padding-right:5%;
-  padding-top:5%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 5%;
   font-weight: 700;
   font-size: x-large;
 }
-.login-form{
- 
-  text-align: center;
-  padding-bottom:1%;
-  padding-left:15%;
-  padding-right:25%;
-  padding-top:2%;
 
+.login-form {
+  text-align: center;
+  padding-bottom: 1%;
+  padding-left: 15%;
+  padding-right: 25%;
+  padding-top: 2%;
 }
-.landing-description{
-  padding:5%;
+
+.landing-description {
+  padding: 5%;
   text-align: center;
   font-weight: 700;
-  font-size: large
-}.bottom-container {
-  background-color:#66BFBF;
+  font-size: large;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
   bottom: 0;
   position: relative;
   padding-bottom: 1%;
-  color:#EAF6F6;
+  color: #EAF6F6;
   text-align: center;
   padding-top: 2%;
-  margin-top:0%;
+  margin-top: 0%;
 }
-a{
+
+a {
   margin: 0 5px;
   text-decoration: none;
 }
-a:hover{
-  color:#EAF6F6;
+
+a:hover {
+  color: #EAF6F6;
 }
-.button{
-box-shadow: 0 10px 14px -7px #276873;
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:20px;
-	font-weight:bold;
-	padding:13px 32px;
-	text-decoration:none;
-	text-shadow:0 1px 0 #3d768a
+
+.button {
+  box-shadow: 0 10px 14px -7px #276873;
+  background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  background-color: #599bb3;
+  border-radius: 8px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 13px 32px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #3d768a;
 }
-@media all and (max-width:768px){
-  .landing-title{
-  /* display: none; */
-  width:30%;
+
+@media all and (max-width: 768px) {
+  .landing-title {
+    /* display: none; */
+    width: 30%;
   }
-  .col{
+
+  .col {
     width: 90%;
     float: none;
     margin: 1rem auto;
- }
-  .landing-top{
+  }
+
+  .landing-top {
     height: 300px;
   }
-  .landing-image{
+
+  .landing-image {
     margin-top: 70px;
     float: right;
-    width:70%;
+    width: 70%;
   }
 }
+
+/*# sourceMappingURL=index.css.map */
