feat: changed login layout

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import './components/auth';
 @import './components/snippet';
+@import './components/input';
 @import './components/profile';
 @import './components/home';
 @import './components/post';
