--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,83 @@
   font-family: "Roboto", sans-serif;
 }
 
+.auth {
+  width: 100%;
+  margin: 0 auto;
+}
+.auth-checkbox {
+  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.auth-checkbox-label {
+  margin: 0;
+  margin-right: 1rem;
+  color: #000000;
+  font-size: 1.5rem;
+}
+.auth-checkbox-input {
+  width: 2rem;
+  height: 2rem;
+}
+
+.auth-form {
+  max-width: 70rem;
+  width: 80%;
+  border-radius: 2rem;
+  padding: 5rem;
+  margin: 5rem auto 10rem;
+  background-color: #ECECEC;
+}
+
+.input {
+  position: relative;
+  background-color: #fff;
+  width: 90%;
+  margin: 6rem auto;
+  border-radius: 2rem;
+}
+.input-text {
+  color: #353434;
+  font-size: 5rem;
+  text-align: center;
+}
+.input-placeholder {
+  top: -3rem;
+  color: rgba(53, 52, 52, 0.8);
+  left: 1rem;
+  transition: 0.4s;
+  opacity: 0;
+  font-size: 1.7rem;
+  position: absolute;
+}
+input:not(:placeholder-shown) ~ .input-placeholder {
+  opacity: 1;
+}
+.input input {
+  background-color: #fff;
+  overflow: hidden;
+  border: none;
+  border-radius: 2rem;
+  width: 100%;
+  outline: none;
+  font-size: 2rem;
+  border-radius: 5rem;
+  color: #353434;
+  padding: 2rem;
+  width: 100%;
+}
+.input input::placeholder {
+  color: rgba(53, 52, 52, 0.8);
+}
+.input input:-webkit-autofill,
+.input input input:-webkit-autofill:hover,
+.input input input:-webkit-autofill:focus,
+.input input input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .home {
   display: flex;
   flex-direction: column;
