--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,25 @@
   width: 100%;
   margin: 0 auto;
 }
+.auth-forgot {
+  font-weight: 300;
+  font-size: 1.5rem;
+  transition: all 0.2s;
+  color: #000000;
+}
+.auth-forgot:hover {
+  color: #000000;
+  transform: scale(1.03);
+}
+.auth-btn {
+  display: flex;
+  justify-content: flex-start;
+  width: 90%;
+  margin: 3rem auto 6rem;
+  border-radius: 2rem;
+}
 .auth-checkbox {
+  cursor: pointer;
   height: 1rem;
   display: flex;
   align-items: center;
@@ -15,11 +33,13 @@
 }
 .auth-checkbox-label {
   margin: 0;
+  cursor: pointer;
   margin-right: 1rem;
   color: #000000;
   font-size: 1.5rem;
 }
 .auth-checkbox-input {
+  cursor: pointer;
   width: 2rem;
   height: 2rem;
 }
@@ -31,6 +51,24 @@
   padding: 5rem;
   margin: 5rem auto 10rem;
   background-color: #ECECEC;
+}
+
+.btn {
+  outline: none;
+  border: none;
+  padding: 2rem;
+  width: 80%;
+  cursor: pointer;
+  transition: all 0.2s;
+  display: block;
+  border-radius: 2rem;
+  max-width: 20rem;
+  color: #FFFFFF;
+  font-size: 2rem;
+  background-color: #000000 !important;
+}
+.btn:hover {
+  transform: scale(1.04);
 }
 
 .input {
