--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './absolutes/typography';
 @import './absolutes/animations';
 
+@import './components/footer';
 
 @import './components/auth';
 @import './components/snippet';
