--- a/client/src/sass/components/_footer.scss
+++ b/client/src/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: $colorSecondaryBackground;
     padding: 3rem;
-
+    height: 16rem;
     &-links {
         width: 90%;
         display: flex;
