--- a/client/src/sass/components/_home.scss
+++ b/client/src/sass/components/_home.scss
@@ -3,4 +3,24 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+
+    &-text {
+        height: calc(100vh - 48rem);
+        margin: 0rem auto 2rem;
+        display: flex;
+        align-items: center;
+
+        @include respond(phone) {
+            width: 75%;
+            height: calc(100vh - 48rem);
+            margin: 0rem auto 2rem;
+            display: flex;
+            align-items: center;
+            // // justify-self: baseline !important;
+        }
+
+        font-size: 2rem;
+    }
+
+    min-height: calc(100vh - 21rem);
 }
