--- a/client/src/sass/components/_profile.scss
+++ b/client/src/sass/components/_profile.scss
@@ -2,22 +2,33 @@
 
     &-header {
         // max-width: 100vw !important;
-
+        
         &-inner {
+            @include respond(phone){
+                flex-direction: column !important;
+            }
             display: flex !important;
             justify-content: space-between;
             width: 100%;
             align-items: center;
             flex-direction: row !important;
+            
         }
 
         &-image {
+            
+        
             border-radius: 100%;
             width: 15rem;
 
         }
 
         &-name {
+            @include respond(phone){
+                font-size: 2.5rem;
+                font-weight: 700;
+                margin-top: 4rem;
+            }
             font-size: 4rem;
         }
     }
